Fixed z-index issues with the feature.

--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -34,8 +34,13 @@
 }
 
 
+
 // Feature Overlay Toggle Buttons
 // ------------------------------
+
+[data-widget-type="feature"] {
+    z-index: 1;
+}
 
 [data-widget-type="feature"] .widget-overlay .widget__list {
     top: 100px!important;
